--- a/styleguide/scss/module/_code.scss
+++ b/styleguide/scss/module/_code.scss
@@ -59,12 +59,14 @@
     padding: 20px;
     font-family: Monaco, Consolas, monospace;
     font-size: 14px;
+    overflow: auto;
 
     .linenums {
       margin-top: 0;
       margin-bottom: 0;
       color: lighten($blue-shade-6, 30%);
       line-height: 1.5;
+      white-space: nowrap;
     }
   }
 
